--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
   "bugs": {
     "url": "https://github.com/symfoni/hardhat-react-boilerplate/issues"
   },
-  "homepage": "https://github.com/symfoni/hardhat-react-boilerplate#readme"
+  "homepage": "https://github.com/symfoni/hardhat-react-boilerplate#readme",
+  "dependencies": {}
 }
