--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^11.1.1",
     "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.6",
     "ethers": "^5.0.17",
     "formik": "^2.2.3",
     "framer-motion": "^2.9.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-test-renderer": "^17.0.1",
     "typescript": "^4.0.5",
