--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,7 @@
     "@storybook/node-logger": "^6.0.28",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.0.28",
-    "babel-loader": "^8.2.0",
+    "babel-loader": "8.1.0",
     "react-is": "^17.0.1"
   }
 }
