--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.15",
+    "@types/luxon": "^1.25.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
