--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
     "url": "https://github.com/symfoni/hardhat-react-boilerplate/issues"
   },
   "homepage": "https://github.com/symfoni/hardhat-react-boilerplate#readme",
-  "dependencies": {}
+  "dependencies": {
+    "ipfs-http-client": "^48.1.1"
+  }
 }
