--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.0.17",
     "formik": "^2.2.3",
     "framer-motion": "^2.9.4",
+    "ipfs-http-client": "^48.1.1",
     "luxon": "^1.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
