--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,24 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.15",
     "@types/luxon": "^1.25.0",
+    "@types/match-sorter": "^5.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-highlight-words": "^0.16.1",
     "@types/react-router-dom": "^5.1.6",
+    "downshift": "^6.0.6",
     "ethers": "^5.0.17",
     "formik": "^2.2.3",
     "framer-motion": "^2.9.4",
     "ipfs-http-client": "^48.1.1",
     "luxon": "^1.25.0",
+    "match-sorter": "^5.0.0",
+    "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-test-renderer": "^17.0.1",
+    "react-use": "^15.3.4",
     "typescript": "^4.0.5",
     "web3modal": "^1.9.1"
   },
