--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-highlight-words": "^0.16.1",
     "@types/react-router-dom": "^5.1.6",
+    "@walletconnect/web3-provider": "^1.3.1",
     "downshift": "^6.0.6",
     "ethers": "^5.0.17",
     "formik": "^2.2.3",
@@ -36,6 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
