--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "npx hardhat test",
     "node": "npx hardhat node --watch",
     "dev": "cd frontend && npm run start",
-    "deploy:prod": "cd frontend && npm run build && npm run deploy:prod"
+    "deploy:prod": "cd frontend && npm run deploy:prod"
   },
   "repository": {
     "type": "git",
