--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-highlight-words": "^0.16.1",
     "@types/react-router-dom": "^5.1.6",
     "@walletconnect/web3-provider": "^1.3.1",
@@ -28,6 +29,7 @@
     "luxon": "^1.25.0",
     "match-sorter": "^5.0.0",
     "polished": "^4.0.4",
+    "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
