--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,10 @@
     "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
     "react-use": "^15.3.4",
+    "simple-react-lightbox": "^3.3.4-2",
     "typescript": "^4.0.5",
     "web3modal": "^1.9.1"
   },
