--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@walletconnect/web3-provider": "^1.3.1",
     "downshift": "^6.0.6",
     "ethers": "^5.0.17",
+    "file-type": "^16.0.1",
     "formik": "^2.2.3",
     "framer-motion": "^2.9.4",
     "ipfs-http-client": "^48.1.1",
